code/style.css
/* Between line 2-14 and also main-container class, serve purpose of keeping the footer at the bottom of the page, didn't want a sticky one */
* { 
  box-sizing: border-box;
 }
 *:before,
 *:after {
  box-sizing: border-box;
 }

html,
body {
 height: 100%;
 position: relative;
}

body {
  margin: 0;
  font-family: "Courier New", Courier, monospace;
  background-image: url(./assets/background-img.jpg);
  background-size: cover;
}

.main-container {
  min-height: 100vh; /* will cover the 100% of viewport */
  overflow: hidden;
  display: block;
  position: relative;
  padding-bottom: 50px; /* height of the footer */
}


h1 {
  font-size: 100px;
  margin-top: 10px;
  margin-bottom: 0;
  font-family: 'Carter One', cursive;
  color: #f5d900;
  text-align: center;
  text-shadow: 5px 5px black;
}

h2 {
  margin-top: 0;
  font-family: 'Carter One', cursive;
  color: #f5d900;
  text-align: center;
  font-size: 30px;
  text-shadow: 3px 3px black;
}

.cards {
  margin: 30px auto 50px auto;
  width: 90%;
  height: 500px;
  display: flex;
  justify-content: space-around;
  align-items: center;
  background-color: rgba(255, 255, 255, 0.3);
  backdrop-filter: blur(3px);
  -webkit-backdrop-filter: blur(3px);
}

.deck-name {
  font-family: 'Carter One', cursive;
  font-size: 25px;
}

p {
  margin: 2px;
  font-family: 'Josefin Sans', sans-serif;
  font-weight: 300;
  font-size: 19px;
  background-color: #fff;
}

#killerImage, #weaponImage, #roomName {
  margin-top: 40px;
}

.killer-deck {
  width: 250px;
  height: 400px;
  background: #000;
  text-align: center;
  padding-top: 30px;
  border-radius: 16px;
  position: relative;
}

.weapon-deck {
  width: 250px;
  height: 400px;
  background: rgb(10, 53, 10);
  text-align: center;
  padding-top: 30px;
  border-radius: 16px;
  position: relative;
}

.room-deck {
  width: 250px;
  height: 400px;
  background: midnightblue;
  text-align: center;
  padding-top: 30px;
  border-radius: 16px;
  position: relative;
}

button {
  padding: 10px 18px;
  background: black;
  color: #f5d900;
  border: none;
  font-size: 25px;
  border-radius: 8px;
  display: block;
  margin: 0 auto 30px auto;
  font-family: 'Carter One', cursive;
}

#restartButton {
  display: none;
}

article, #revealButton, #restartButton {
  cursor: pointer;
}

#mystery {
  width: 800px;
  text-align: center;
  margin: 10px auto;
  font-size: 30px;
}

/* LOADER STYLING */
#loader1, #loader2, #loader3 {
  position: absolute;
  left: 150px;
  top: 50%;
  z-index: 1;
  width: 75px;
  height: 75px;
  margin: -75px 0 0 -75px;
  border: 10px solid white;
  border-radius: 50%;
  border-top: 10px solid black;
  -webkit-animation: spin 2s linear infinite;
  animation: spin 2s linear infinite;
  display: none;
}

@-webkit-keyframes spin {
  0% { -webkit-transform: rotate(0deg); }
  100% { -webkit-transform: rotate(360deg); }
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

footer {
  margin-top: 200px;
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 50px;
  background-color: black;
}

footer p {
  color: white;
  background-color: black; /* overrides p styling set above */
  text-align: center;
  margin: 20px 0 0 0; /* overrides p styling set above */
}

a {
  text-decoration: none;
  color: #f5d900;
}

a:hover {
  color: white;
}

